--- a/age_well_video_question1.html
+++ b/age_well_video_question1.html
@@ -25,17 +25,17 @@
 		b) Assess pain using behavioural/observational tool  
 		(e.g., PAINAD, PACSLAC), while assisting him to bed." 
 		color="#FFFFFF"
-        position="-2 3 -5" scale="1.5 1.5 1.5" alignment="center" visible="false" font="mozillavr">
+        position="-2 3 -5" scale="1.5 1.5 1.5" alignment="center" visible="false">
 			<a-box color="black" position="2.4 0 -0.01" scale="5.4 3.2 0.01" material="opacity: 0.8"></a-box>
 			<!--Correct answer-->
-			<a-box id="answer1" scale="2.7 1 0.01" color="black" position="3.75 -2.1 0" custom_link="answer1.html" material="opacity: 0.8">
-				<a-text value="B" color="black" position="-0.1 0 0.1" scale="2 2 2" alignment="center"></a-text>
+			<a-box id="answer1" scale="2.7 1 0.01" color="black" position="4.05 -2.4 0" custom_link="answer1.html" material="opacity: 0.8">
+				<a-text value="B" color="white" position="-0.1 0 0.1" scale="2 2 2" alignment="center"></a-text>
 				<a-animation attribute="material.color" begin="mouseenter" dur="300" from="black" to="red"></a-animation>
 				<a-animation attribute="material.color" begin="mouseleave" dur="300" from="red" to="black"></a-animation>
 			</a-box>
 			<!--Incorrect answer-->
-			<a-box id="answer2" color="black" scale="2.7 1 0.01" position="1.05 -2.1 0" custom_link="answer2.html" material="opacity: 0.8">
-				<a-text value="A" color="black" position="-0.1 0 0.1" scale="2 2 2" alignment="center"></a-text>
+			<a-box id="answer2" color="black" scale="2.7 1 0.01" position="0.75 -2.4 0" custom_link="answer2.html" material="opacity: 0.8">
+				<a-text value="A" color="white" position="-0.1 0 0.1" scale="2 2 2" alignment="center"></a-text>
 				<a-animation attribute="material.color" begin="mouseenter" dur="300" from="black" to="red"></a-animation>
 				<a-animation attribute="material.color" begin="mouseleave" dur="300" from="red" to="black"></a-animation>
 			</a-box>
