--- a/age_well_intro.html
+++ b/age_well_intro.html
@@ -38,8 +38,8 @@
 			</a-camera>
 		
 		
-		<a-box id="playbutton" position="0 0 -5" color="black" material="opacity: 0.8" scale="1 1 0.01" custom_link="age_well_video_question1.html" visible="false">
-			<a-text value="play" position="-0.4 0.25 0" scale="2 2 1"></a-text>
+		<a-box id="playbutton" position="0 0 -5" color="black" material="opacity: 0.8" scale="1.5 1 0.01" custom_link="age_well_video_question1.html" visible="false">
+			<a-text value="play" position="0 0 0" scale="2 2 1" text="align: center"></a-text>
 			<a-animation attribute="material.color" begin="mouseenter" dur="300" from="black" to="red"></a-animation>
 			<a-animation attribute="material.color" begin="mouseleave" dur="300" from="red" to="black"></a-animation>
 		</a-box>
