--- a/answer2.html
+++ b/answer2.html
@@ -21,16 +21,16 @@
 		a) Go Back \n
 		b) End Demonstration" 
 		color="#FFFFFF"
-        position="-2 3 -5" scale="1.5 1.5 1.5" alignment="center" visible="false" font="mozillavr">
+        position="-2 3 -5" scale="1.5 1.5 1.5" alignment="center" visible="false">
 			<a-box color="black" position="2.4 0 -0.01" scale="5.4 2.4 0.01" material="opacity: 0.8"></a-box>
 			<!--Correct answer-->
-			<a-box id="answer1" scale="2.7 1 0.01" color="black" position="3.75 -1.7 0" custom_link="age_well_end.html" material="opacity: 0.8">
+			<a-box id="answer1" scale="2.7 1 0.01" color="black" position="4.05 -2 0" custom_link="age_well_end.html" material="opacity: 0.8">
 				<a-text value="B" color="white" position="-0.1 0 0.1" scale="2 2 2" alignment="center"></a-text>
 				<a-animation attribute="material.color" begin="mouseenter" dur="300" from="black" to="red"></a-animation>
 				<a-animation attribute="material.color" begin="mouseleave" dur="300" from="red" to="black"></a-animation>
 			</a-box>
 			<!--Incorrect answer-->
-			<a-box id="answer2" color="black" scale="2.7 1 0.01" position="1.05 -1.7 0" custom_link="age_well_video_question1.html" material="opacity: 0.8">
+			<a-box id="answer2" color="black" scale="2.7 1 0.01" position="0.75 -2 0" custom_link="age_well_video_question1.html" material="opacity: 0.8">
 				<a-text value="A" color="white" position="-0.1 0 0.1" scale="2 2 2" alignment="center"></a-text>
 				<a-animation attribute="material.color" begin="mouseenter" dur="300" from="black" to="red"></a-animation>
 				<a-animation attribute="material.color" begin="mouseleave" dur="300" from="red" to="black"></a-animation>
