--- a/age_well_video_question1.html
+++ b/age_well_video_question1.html
@@ -18,24 +18,21 @@
         </a-videosphere>
 	  
 		<a-text id="question_text" value="Mr.Anderson said No when asked if he has pain. 
-		How do you interpret this response? \n 
-		a) Accept Mr.Anderon's self-report of no pain.
-		Assume his agitation is due to being in an unfamiliar
-		setting, assist him to bed. \n 
-		b) Assess pain using behavioural/observational tool  
-		(e.g., PAINAD, PACSLAC), while assisting him to bed." 
+		How do you interpret this response? \n
+		a) Accept Mr.Anderon's self-report of no pain. Assume his agitation is due to being in an unfamiliar setting, assist him to bed. \n
+		b) Assess pain using behavioural/observational tool(e.g., PAINAD, PACSLAC), while assisting him to bed." 
 		color="#FFFFFF"
         position="-2 3 -5" scale="1.5 1.5 1.5" alignment="center" visible="false">
 			<a-box color="black" position="2.4 0 -0.01" scale="5.4 3.2 0.01" material="opacity: 0.8"></a-box>
 			<!--Correct answer-->
 			<a-box id="answer1" scale="2.7 1 0.01" color="black" position="4.05 -2.4 0" custom_link="answer1.html" material="opacity: 0.8">
-				<a-text value="B" color="white" position="-0.1 0 0.1" scale="2 2 2" alignment="center"></a-text>
+				<a-text value="B" color="white" position="-0.1 0 0.1" scale="2 2 2" alignment="center" material="opacity: 1"></a-text>
 				<a-animation attribute="material.color" begin="mouseenter" dur="300" from="black" to="red"></a-animation>
 				<a-animation attribute="material.color" begin="mouseleave" dur="300" from="red" to="black"></a-animation>
 			</a-box>
 			<!--Incorrect answer-->
 			<a-box id="answer2" color="black" scale="2.7 1 0.01" position="0.75 -2.4 0" custom_link="answer2.html" material="opacity: 0.8">
-				<a-text value="A" color="white" position="-0.1 0 0.1" scale="2 2 2" alignment="center"></a-text>
+				<a-text value="A" color="white" position="-0.1 0 0.1" scale="2 2 2" alignment="center" material="opacity: 1"></a-text>></a-text>
 				<a-animation attribute="material.color" begin="mouseenter" dur="300" from="black" to="red"></a-animation>
 				<a-animation attribute="material.color" begin="mouseleave" dur="300" from="red" to="black"></a-animation>
 			</a-box>
@@ -46,11 +43,11 @@
 		
 		
 			<a-camera id="camera" wasd-controls-enabled="false">
-				<a-entity position="0 0 -3"
-					geometry="primitive: ring; radiusInner: 0.04; radiusOuter: 0.06;"
-					material="color: cyan; shader: flat"
-					cursor="maxDistance: 30; fuse: true">
-				</a-entity>
+				<a-entity position="0 0 -1"
+						geometry="primitive: ring; radiusInner: 0.015; radiusOuter: 0.02;"
+						material="color: cyan; shader: flat"
+						cursor="maxDistance: 30; fuse: true">
+					</a-entity>
 			</a-camera>
 		
 		
