--- a/answer1.html
+++ b/answer1.html
@@ -30,13 +30,13 @@
 			<a-box color="black" position="2.4 0 -0.01" scale="5.4 2.4 0.01" material="opacity: 0.8"></a-box>
 			<!--Correct answer-->
 			<a-box id="answer1" scale="2.7 1 0.01" color="black" position="4.05 -2 0" custom_link="age_well_end.html" material="opacity: 0.8">
-				<a-text value="B" color="white" position="-0.1 0 0.1" scale="2 2 2" alignment="center"></a-text>
+				<a-text value="B" color="white" position="-0.1 0 0.1" scale="2 2 2" alignment="center" material="opacity: 1"></a-text>></a-text>
 				<a-animation attribute="material.color" begin="mouseenter" dur="300" from="black" to="red"></a-animation>
 				<a-animation attribute="material.color" begin="mouseleave" dur="300" from="red" to="black"></a-animation>
 			</a-box>
 			<!--Incorrect answer-->
 			<a-box id="answer2" color="black" scale="2.7 1 0.01" position="0.75 -2 0" custom_link="age_well_video_question1.html" material="opacity: 0.8">
-				<a-text value="A" color="white" position="-0.1 0 0.1" scale="2 2 2" alignment="center"></a-text>
+				<a-text value="A" color="white" position="-0.1 0 0.1" scale="2 2 2" alignment="center" material="opacity: 1"></a-text>></a-text>
 				<a-animation attribute="material.color" begin="mouseenter" dur="300" from="black" to="red"></a-animation>
 				<a-animation attribute="material.color" begin="mouseleave" dur="300" from="red" to="black"></a-animation>
 			</a-box>
@@ -52,11 +52,11 @@
 		
 		
 			<a-camera id="camera" wasd-controls-enabled="false">
-				<a-entity position="0 0 -3"
-					geometry="primitive: ring; radiusInner: 0.04; radiusOuter: 0.06;"
-					material="color: cyan; shader: flat"
-					cursor="maxDistance: 30; fuse: true">
-				</a-entity>
+				<a-entity position="0 0 -1"
+						geometry="primitive: ring; radiusInner: 0.015; radiusOuter: 0.02;"
+						material="color: cyan; shader: flat"
+						cursor="maxDistance: 30; fuse: true">
+					</a-entity>
 			</a-camera>
 		
 		
