--- a/answer2.html
+++ b/answer2.html
@@ -25,13 +25,13 @@
 			<a-box color="black" position="2.4 0 -0.01" scale="5.4 2.4 0.01" material="opacity: 0.8"></a-box>
 			<!--Correct answer-->
 			<a-box id="answer1" scale="2.7 1 0.01" color="black" position="4.05 -2 0" custom_link="age_well_end.html" material="opacity: 0.8">
-				<a-text value="B" color="white" position="-0.1 0 0.1" scale="2 2 2" alignment="center" material="opacity: 1"></a-text>></a-text>
+				<a-text value="B" color="white" position="-0.1 0 0.1" scale="2 2 2" alignment="center" material="opacity: 1"></a-text>
 				<a-animation attribute="material.color" begin="mouseenter" dur="300" from="black" to="red"></a-animation>
 				<a-animation attribute="material.color" begin="mouseleave" dur="300" from="red" to="black"></a-animation>
 			</a-box>
 			<!--Incorrect answer-->
 			<a-box id="answer2" color="black" scale="2.7 1 0.01" position="0.75 -2 0" custom_link="age_well_video_question1.html" material="opacity: 0.8">
-				<a-text value="A" color="white" position="-0.1 0 0.1" scale="2 2 2" alignment="center" material="opacity: 1"></a-text>></a-text>
+				<a-text value="A" color="white" position="-0.1 0 0.1" scale="2 2 2" alignment="center" material="opacity: 1"></a-text>
 				<a-animation attribute="material.color" begin="mouseenter" dur="300" from="black" to="red"></a-animation>
 				<a-animation attribute="material.color" begin="mouseleave" dur="300" from="red" to="black"></a-animation>
 			</a-box>
