--- a/workspace.html
+++ b/workspace.html
@@ -8,7 +8,7 @@
 	<script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v4.1.2/dist/aframe-extras.min.js"></script>
 	<script src="https://unpkg.com/super-hands@2.1.0/dist/super-hands.min.js"></script>
 	<script src="https://cdn.rawgit.com/donmccurdy/aframe-physics-system/v3.1.2/dist/aframe-physics-system.min.js"></script> 
-	<script src="age-well-components.js"></script> 
+	<script src="js/age-well-components.js"></script> 
   
 	
   </head>
@@ -19,10 +19,10 @@
 	<!--Assets--> 
 	
 		<a-assets>
-	      <img id="skyTexture" src="forest.jpg">
-		  <img id="floorTexture" src="floor.jpg">
-		  <img id="bboardTexture" src="base.jpg">
-		  <img id="wallTexture" src="Wall.jpg">
+	      <img id="skyTexture" src="assets/forest.jpg">
+		  <img id="floorTexture" src="assets/floor.jpg">
+		  <img id="bboardTexture" src="assets/base.jpg">
+		  <img id="wallTexture" src="assets/Wall.jpg">
 		  <!--<a-asset-item id="brain-obj" src="brain.obj"></a-asset-item>
 		  <a-asset-item id="brain-mtl" src="brain.mtl"></a-asset-item>-->
 		</a-assets>
@@ -45,11 +45,11 @@
 		<a-text id="instructions1" value="Click and drag \n the mouse in \n the direction \n you want to \n turn the screen" color="#FFFFFF"
 			position="-4 1.6 -4.9" scale="0.9 0.9 1" text="align: center">
 				<a-box scale="1.6 1.18 0.01" position="0 -0.03 -0.01" material="opacity: 0.5" color="grey"></a-box>
-				<a-image src="Keyboard_Black_Mouse_Left.png" position="0 1 0" scale="0.5 0.5 0.5">
+				<a-image src="assets/Keyboard_Black_Mouse_Left.png" position="0 1 0" scale="0.5 0.5 0.5">
 					<a-animation attribute="position" to="0.5 1.5 0" direction="alternate" dur="2000" repeat="indefinite"></a-animation>
 					<a-animation attribute="visible" from="true" to="false" direction="alternate" delay="2000" dur="1" repeat="indefinite"></a-animation>
 				</a-image>
-				<a-image src="Keyboard_Black_Mouse_Simple.png" position="0 1 0" scale="0.5 0.5 0.5" visible="false">
+				<a-image src="assets/Keyboard_Black_Mouse_Simple.png" position="0 1 0" scale="0.5 0.5 0.5" visible="false">
 					<a-animation attribute="position" to="0.5 1.5 0" direction="alternate" dur="2000" repeat="indefinite"></a-animation>
 					<a-animation attribute="visible" from="false" to="true" direction="alternate" delay="2000" dur="1" repeat="indefinite"></a-animation>
 				</a-image>
@@ -59,7 +59,7 @@
 			position="0 1.6 -4.9" scale="0.9 0.9 1" text="align: center">
 				<a-box scale="1.6 1.18 0.01" position="0 -0.03 -0.01" material="opacity: 0.5" color="grey"></a-box>
 				<a-text id="start-button-text" value="START" position="0 1 0" color="white" scale="0.5 0.5 0.5">
-					<a-box id="start-button"src="Keyboard_Black_Quote.png" custom_link="age_well_intro.html" position="0.35 0 -0.1" rotation="0 0 45" scale="0.5 0.5 0.1">			
+					<a-box id="start-button"src="assets/Keyboard_Black_Quote.png" custom_link="age_well_intro.html" position="0.35 0 -0.1" rotation="0 0 45" scale="0.5 0.5 0.1">			
 					</a-box>
 					<a-ring color="cyan" radius-inner="1.3" radius-outer="2" scale="0.06 0.06 0.06" position="0.5 0 0.1">
 						<a-animation attribute="position" to="-1 1.5 0.1" direction="alternate" dur="3200" repeat="indefinite"></a-animation>
@@ -71,16 +71,16 @@
 			position="4 1.6 -4.9" scale="0.9 0.9 1" text="align: center">
 				<a-box scale="1.65 1 0.01" position="0 -0.03 -0.01" material="opacity: 0.5" color="grey"></a-box>
 				<a-entity id="arrow_keys" position="0 1 0" scale="0.5 0.5 0.5">
-					<a-image src="Keyboard_Black_Arrow_Down.png" position="0 0 0" ></a-image>
-					<a-image src="Keyboard_Black_Arrow_Up.png" position="0 1 0" ></a-image>
-					<a-image src="Keyboard_Black_Arrow_Left.png" position="-1 0 0" ></a-image>
-					<a-image src="Keyboard_Black_Arrow_Right.png" position="1 0 0" ></a-image>
+					<a-image src="assets/Keyboard_Black_Arrow_Down.png" position="0 0 0" ></a-image>
+					<a-image src="assets/Keyboard_Black_Arrow_Up.png" position="0 1 0" ></a-image>
+					<a-image src="assets/Keyboard_Black_Arrow_Left.png" position="-1 0 0" ></a-image>
+					<a-image src="assets/Keyboard_Black_Arrow_Right.png" position="1 0 0" ></a-image>
 				</a-entity>
 			</a-text>
 		
 		<!-- start button-->
 		<a-text id="start-button-text" value="START" position="0 0.5 -3" color="white" text="align: center">
-			<a-box id="start-button"src="Keyboard_Black_Quote.png" custom_link="age_well_intro.html" position="0 0 -0.25" rotation="45 0 45" scale="0.3 0.3 0.3">
+			<a-box id="start-button"src="assets/Keyboard_Black_Quote.png" custom_link="age_well_intro.html" position="0 0 -0.25" rotation="45 0 45" scale="0.3 0.3 0.3">
 				<a-animation attribute="rotation" to="45 360 45" dur="5000" repeat="indefinite" easing="linear"></a-animation>
 			
 			</a-box>
@@ -91,15 +91,15 @@
 	
 		<!-- logos -->
 	
-		<a-image src="age-well-competition.jpg" position="-4.9 2.5 -3.75" rotation="0 90 0">
+		<a-image src="assets/age-well-competition.jpg" position="-4.9 2.5 -3.75" rotation="0 90 0">
 			<a-box color="black" material="opacity: 0.8" position="-0 0 -0.01" scale="1.1 1.1 0.01" transparent="true"></a-box>
 		</a-image>
 	
-		<a-image src="Competition-Logo1.png" position="4.9 2.5 -3.75" rotation="0 -90 0">
+		<a-image src="assets/Competition-Logo1.png" position="4.9 2.5 -3.75" rotation="0 -90 0">
 			<a-box color="black" material="opacity: 0.8" position="0 0 -0.01" scale="1.1 1.1 0.01" transparent="true"></a-box>
 		</a-image>
 		
-		<a-image src="Luxsonic-Logo-2.png" position="-4.9 2.5 0" rotation="0 90 0" scale="1.8 0.6 1">
+		<a-image src="assets/Luxsonic-Logo-2.png" position="-4.9 2.5 0" rotation="0 90 0" scale="1.8 0.6 1">
 			<a-box color="white" material="opacity: 0.8" position="0 0 -0.01" scale="1.1 1.1 0.01" transparent="true"></a-box>
 		</a-image>
 
@@ -207,7 +207,7 @@
 	
 			<a-plane static-body src="#floorTexture" repeat="5 5" rotation="-90 0 0" width="10" height="10"></a-plane>
 			<a-plane src="#floorTexture" position="0 4.5 0" repeat="5 5" rotation="90 0 0" width="10" height="10"></a-plane>	
-			<a-plane src="age_well_floor_logo.png" position="0 0.1 0" rotation="-90 0 0" scale="7 7 7"></a-plane>
+			<a-plane src="assets/age_well_floor_logo.png" position="0 0.1 0" rotation="-90 0 0" scale="7 3.5 7"></a-plane>
 	</a-entity>
 	<!--background--> 
 	  <a-sky src="#skyTexture"></a-sky>
